# python-project-lvl2

./: .gitignore  Makefile  README.md  diff_file1.json_and_file2.json.json  pyproject.toml  setup.cfg
.github/workflows/: linter-check.yml  test-check.yml  test-coverage.yml
gendiff/: __init__.py  build_diff.py  change_status.py  gendiff.py  open_files.py  parser.py
gendiff/formater/: format_diff.py  json.py  plain.py  sort.py  stylish.py
gendiff/scripts/: gendiff.py
hexlet_python_package/: __init__.py  gendiff.py  parser.py
hexlet_python_package/formater/: json.py  plain.py  sort.py  stylish.py
hexlet_python_package/scripts/: gendiff.py
test/: test_exception_formater.py  test_exception_gendiff.py  test_generate_diff.py  test_json_formater.py  test_plain_formater.py  test_stylish_formater.py
test/fixtures/: result_json_output
