[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["andrew.dragunskih <andrew.dragunskih@yandex.ru>"]
packages = [
	{ include = "hexlet_python_package"}
]

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.4.0"
pytest = "^7.1.2"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
PyYAML = "^6.0"

[tool.poetry.scripts]
gendiff = "hexlet_python_package.scripts.gendiff:main"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.1"

[tool.pytest.ini_options]
pythonpath = [
'.',
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
